project(cb-glade-tictactoe C)
cmake_minimum_required(VERSION 2.6)
find_package(PkgConfig REQUIRED)
pkg_check_modules(GTK3 REQUIRED gtk+-3.0>=3.10)
include_directories(${GTK3_INCLUDE_DIRS})
link_directories(${GTK3_LIBRARY_DIRS})
add_definitions(${GTK3_CFLAGS_OTHER})
file( GLOB SRC RELATIVE "${CMAKE_SOURCE_DIR}" "${CMAKE_SOURCE_DIR}/*.c" )
foreach( cSource ${SRC} )
  string( REPLACE ".c" "" prgName ${cSource} )
  add_executable(${prgName} ${cSource})
  target_link_libraries(${prgName} ${GTK3_LIBRARIES})
endforeach( cSource )
